--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -18,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-collapsible-tab-view": "^6.2.1",
+    "react-native-element-dropdown": "^2.10.1",
     "react-native-elements": "^3.4.3",
     "react-native-google-signin": "^2.1.1",
     "react-native-pager-view": "^6.2.3",
