--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -28,10 +28,13 @@
     "react-native-google-signin": "^2.1.1",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-pager-view": "^6.2.3",
+    "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1"
