--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-image-slider-box": "^2.0.7",
     "react-native-pager-view": "^6.2.3",
     "react-native-picker-select": "^9.0.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
